# MMRL

./: .gitattributes  .gitignore  README.md  build.gradle.kts  commits.sh  settings.gradle.kts  spoof
.github/ISSUE_TEMPLATE/: bug.yml  fr.yml
.github/workflows/: build.yml  github.yml  release-ci.yml  telegram-ci.yml  telegram.yml
.github/workflows/release/: github.yml
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.dergoogler.mmrl.database.AppDatabase/: 11.json  12.json  13.json  14.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: markdown.css  markdown.html
app/src/main/jni/: CMakeLists.txt  file-manager.cpp
app/src/main/jni/include/: logging.hpp
app/src/main/jni/include/kernelsu/: ksu.hpp
app/src/main/jni/kernelsu/: jni.cpp  ksu.cpp
app/src/main/proto/: UserPreferences.proto  WorkingMode.proto
assets/: phoneScreenshots.sketch
build-logic/src/main/kotlin/: ProjectExt.kt
compat/: build.gradle.kts
datastore/: build.gradle.kts  settings.gradle.kts
ext/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hidden-api/: build.gradle.kts
platform/: build.gradle.kts  settings.gradle.kts
platform/src/main/jni/: CMakeLists.txt  file-manager.cpp
platform/src/main/jni/include/kernelsu/: ksu.hpp  ksun.hpp  sukisu.hpp
platform/src/main/jni/kernelsu/: jni.cpp  ksu.cpp  ksun.cpp  sukisu.cpp
platform/src/main/jni/shell/: ShellWrapper.cpp  ShellWrapper.h  jni.cpp
ui/: build.gradle.kts  settings.gradle.kts
webui/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro  settings.gradle.kts
(+654 files in other folders)
